force-app/main/default/objects/Customer_Feedback__c/fields/Feedback_Text__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Text__c</fullName>
    <label>Feedback Text</label>
    <type>TextArea</type>
</CustomField>