force-app/main/default/objects/Customer_Feedback__c/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <label>Feedback Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Interaction</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>