force-app/main/default/objects/Customer_Feedback__c/validationRules/Enforce_Rating_Limits.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Rating_Limits</fullName>
    <active>true</active>
    <description>Validate if the rating value is under 1-5.</description>
    <errorConditionFormula>OR(
    Rating__c &lt; 1,
    Rating__c &gt; 5
)</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Rating must be between 1 and 5.</errorMessage>
</ValidationRule>