force-app/main/default/objects/Customer_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Feedback_Type__c</columns>
    <columns>Feedback_Text__c</columns>
    <columns>Rating__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Customer Feedbacks</label>
</ListView>